# dart-bclibc

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  ffigen.yaml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
android/: settings.gradle
assets/wasm/: bclibc_ffi.wasm
dart/: CHANGELOG.md  README.md  pubspec.yaml
dart/lib/: bclibc.dart  unit.dart
dart/lib/ffi/: bclibc_ffi.dart  bclibc_ffi_stub_web.dart
dart/lib/src/: calculator_stub_web.dart  munition.dart
flutter/: CHANGELOG.md  README.md  pubspec.yaml
flutter/android/: build.gradle
flutter/android/src/main/: AndroidManifest.xml
flutter/assets/wasm/: bclibc_ffi.js
flutter/ios/: dart_bclibc.podspec
flutter/lib/: bclibc.dart
flutter/lib/ffi/: _no_web_addon.dart  bclibc_ffi_web.dart
flutter/lib/src/: async_calculator.dart  async_engine_io.dart  async_engine_web.dart
flutter/linux/: CMakeLists.txt
flutter/macos/: dart_bclibc.podspec
flutter/src/: CMakeLists.txt
flutter/test/: async_calculator_test.dart
flutter/test/web/: async_calculator_web_test.dart  bclibc_ffi_web_test.dart
flutter/windows/: CMakeLists.txt
lib/: bclibc.dart
lib/ffi/: bclibc_bindings_stub_web.dart  bclibc_ffi.dart  bclibc_ffi_web.dart  bclibc_types.dart
lib/src/: async_calculator.dart  async_engine_io.dart  async_engine_web.dart  bclibc_web_plugin.dart  calculator.dart  calculator_core.dart  calculator_defaults.dart  conditions.dart  drag_model.dart  shot.dart  trajectory_data.dart
linux/: CMakeLists.txt
scripts/ci/: extract-changelog.sh  prepare_release.py
src/: CMakeLists.txt
test/: async_calculator_test.dart  ffi_test.dart  unit_test.dart
test/web/: async_calculator_web_test.dart  bclibc_ffi_web_test.dart
windows/: CMakeLists.txt
